Bug 151232 - Lines in Special Characters dialog do not respect dark mode
Summary: Lines in Special Characters dialog do not respect dark mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.5.2 release
Hardware: All All
: low trivial
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
Depends on:
Blocks: Linux-Dark-Mode Windows-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-09-29 17:56 UTC by Rafael Lima
Modified: 2022-10-05 15:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Special Characters dialog (dark mode) (86.12 KB, image/png)
2022-09-29 17:56 UTC, Rafael Lima
Details
SCD on Windows in Dark color theme (45.49 KB, image/png)
2022-09-29 21:57 UTC, V Stuart Foote
Details
SCD in Linux (after the patch) (75.70 KB, image/png)
2022-09-30 17:21 UTC, Rafael Lima
Details
SCD in Linux (after the updated patch) (75.86 KB, image/png)
2022-09-30 18:24 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2022-09-29 17:56:13 UTC
Created attachment 182735 [details]
Special Characters dialog (dark mode)

See attached image for more details.

Using dark mode (Linux) the lines in the Special Characters dialog remain black, hence not visible.

In light mode these lines are black, meaning that in dark mode they should be white.

System info

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 8b5a989dcdcf4edd50c9fdb092d4180432ce4b6a
CPU threads: 12; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 V Stuart Foote 2022-09-29 21:56:38 UTC
Identical result for Windows 10 in Dark color theme mode, the grid lines in the SCD remain dark. But pretty trivial as they are visible...

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0d3dd0aa54ad792f91d0905f3d46c13df3512d89
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 V Stuart Foote 2022-09-29 21:57:36 UTC
Created attachment 182738 [details]
SCD on Windows in Dark color theme
Comment 3 Rafael Lima 2022-09-30 17:21:59 UTC
Created attachment 182756 [details]
SCD in Linux (after the patch)

Proposed patch at:

https://gerrit.libreoffice.org/c/core/+/140759

Here's a screenshot of how the dialog looks after the patch.
Comment 4 Rafael Lima 2022-09-30 18:24:24 UTC
Created attachment 182757 [details]
SCD in Linux (after the updated patch)

Here's a new screenshot with an updated version of the patch.

Notice that it now fixes the character view at the top-right corner.
Comment 5 V Stuart Foote 2022-09-30 20:23:53 UTC
(In reply to Rafael Lima from comment #4)
> Created attachment 182757 [details]
> SCD in Linux (after the updated patch)
> 
> Here's a new screenshot with an updated version of the patch.
> 
> Notice that it now fixes the character view at the top-right corner.

Nice, thanks!
Comment 6 Heiko Tietze 2022-10-04 08:53:25 UTC
LGTM too
Comment 7 Commit Notification 2022-10-05 03:44:53 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e4697c7675430f5e4e2221c951971caee0bdeb8

tdf#151232 Fix lines in Special Characters dialog in dark mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-10-05 04:55:15 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/19b650dd49620f699b695fb95679284be509ef2e

tdf#151232 Fix lines in Special Characters dialog in dark mode

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 BogdanB 2022-10-05 15:19:38 UTC
Verified. Confirm it is solved
It's ok in
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a36173359d4614a8935e2f764acadfcf736e091c
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was NOT ok in
Version: 7.4.0.2 / LibreOffice Community
Build ID: 1512ce97d7ed39dce3121f7e15651fd8895f950e
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded