tdf#151232 Fix lines in Special Characters dialog in dark mode

This patch makes the lines in the Special Characters dialog visible in dark mode. The Insert Symbols widget is also fixed with this patch.

Tested in gen, gtk3 and kf5.

Change-Id: Id1ee21557f2a0ea4ad8b60973d3de71e4d6d5d09
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140759
Tested-by: Jenkins
Reviewed-by: V, Stuart Foote <vstuart.foote@utsa.edu>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>